<resources>
    <string name="app_name">Safesync Contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="realtime_database">RealTime Database</string>
    <string name="database_TLDR">Kindly be advised that Google Firebase is presently utilized for real-time database services. Users are reminded to exercise caution and use this service at their own discretion and risk. Your understanding and adherence to this notice are appreciated.</string>
    <string name="search_contact">Search contact</string>
    <string name="search_data">Search data</string>
    <string name="enter_phone_number_to_search">Enter phone number to search</string>
    <string name="search_contact_info">Explore public data seamlessly through this section.</string>
    <string name="add_update_contact">Add/ Update Contact</string>
    <string name="update_contact_info">For security purposes, please note that contact additions should be carried out individually, ensuring explicit permission is granted before inserting someone\'s identity into the system. Your cooperation in adhering to this protocol is greatly appreciated.</string>
    <string name="update_data">Add Data</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_name">Enter name</string>
    <string name="app_slogan">Empowering your privacy.</string>
    <string name="app_slogan_z"> Everyone has right to protect his contacts.</string>
    <string name="version">Version 0.0.3</string>
    <string name="flare_studio_team_full_txt">Developed with passion and love,\nby the Flare Studio Team.</string>
    <string name="maintainers">Maintainers</string>
    <string name="maintainers_list">Sharafat Karim\nSadman Kabir\nMehedi Hasan Monir</string>
    <string name="extra_info">This is an open source application, distributed under MIT licence. Source code is available on GitHub. Any kinds of contributions are welcomed. Feel free to submit pull requests for any issues or improvements.</string>
    <string name="github_repository">GitHub repository</string>
    <string name="submit_an_issue">Submit an issue</string>
    <string name="contact_info">Contact info</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="email_empty">Email empty</string>
    <string name="notes">Notes</string>
    <string name="notes_empty">Notes empty</string>
    <string name="added_time">Added time</string>
    <string name="edited_time">Edited time</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="contact_edit">Contact edit</string>
    <string name="save">Save</string>
    <string name="all_contacts">All contacts</string>
    <string name="new_contact">New contact</string>
    <string name="delete_all">Delete all</string>
    <string name="add_contact">Add contact</string>
    <string name="import_from_system">Import from system</string>
</resources>